--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev:server": "cross-env NODE_ENV=development node server/server.js",
     "clear": "rimraf dist",
     "build": "npm run clear && npm run build:client && npm run build:server",
-    "dev": "webpack --mode development --config build/webpack.config.client.js"
+    "dev": "webpack --mode development --config build/webpack.config.client.js",
+    "lint": "eslint --ext .js --ext .jsx client/",
+    "precommit": "npm run lint"
   },
   "author": "",
   "license": "ISC",
@@ -34,12 +36,25 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@hot-loader/react-dom": "^16.8.6",
+    "@types/express": "^4.17.0",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.19.1",
+    "husky": "^3.0.0",
     "memory-fs": "^0.4.1",
     "react-hot-loader": "^4.12.1",
     "style-loader": "^0.23.1",
