--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:client": "webpack --mode development --config build/webpack.config.client.js",
     "build:server": "webpack --mode development --config build/webpack.config.server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --mode development --config build/webpack.config.client.js",
-    "dev:server": "cross-env NODE_ENV=development node server/server.js",
+    "dev:server1": "cross-env NODE_ENV=development node server/server.js",
+    "dev:server": "nodemon server/server.js",
     "clear": "rimraf dist",
     "build": "npm run clear && npm run build:client && npm run build:server",
     "dev": "webpack --mode development --config build/webpack.config.client.js",
@@ -24,7 +25,8 @@
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -56,10 +58,12 @@
     "http-proxy-middleware": "^0.19.1",
     "husky": "^3.0.0",
     "memory-fs": "^0.4.1",
+    "nodemon": "^1.19.1",
     "react-hot-loader": "^4.12.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "webpack-merge": "^4.2.1"
   }
 }
